# Trading_Simulator

./: .gitignore  CMakeLists.txt  README.md
include/: IQuantCalculatorAPI.h  QuantCalculationResults.h  QuantCalculatorAPI.h  QuantConstants.h  QuantInputHandler.h  QuantOKXCalculator.h  QuantOrderbook.h  QuantWebSocket.h
interface/: QuantInputParameter.qml  QuantOrderbook.qml  QuantOutputParameter.qml  main.qml
src/: QuantCalculationResults.cpp  QuantCalculatorAPI.cpp  QuantConstants.cpp  QuantInputHandler.cpp  QuantOKXCalculator.cpp  QuantOrderbook.cpp  QuantWebSocket.cpp  main.cpp
